[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "brain games - these are 5 mini games for brain training"
authors = ["Nikita Anokhin <soratnik32@gmail.com>"]
repository = "https://github.com/soratnik32/python-project-49"
readme = "README.md"
packages = [
  { include = "brain_games" },
]
classifiers = [
  "Environment :: Console",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Topic :: Games/Entertainment",
]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"